--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       <p>Experimente o sabor do espaço com a Space Cream! Nossos sorvetes são feitos com ingredientes frescos e exclusivos. Sabores surpreendentes como o de Marte e Júpiter te farão sentir como se estivesse em uma viagem pelo universo. Venha nos visitar e experimente hoje mesmo! Space Cream, a sorveteria fora do comum. </p>
 
       <div class="card">
-        <img src="image/sorvete1.svg" alt="Imagem com 3 picolés de uva um em cima do outro com algumas frutas espalhadas">
+        <img src="image/sorvete1.svg" alt="Imagem com 3 paletas de uva um em cima do outro com algumas frutas espalhadas">
         <h2>Paletas</h2>
       </div>
       
       <div class="card">
-        <img src="image/sorvete2.svg" alt="Imagem com 3 picolés de uva um em cima do outro com algumas frutas espalhadas">
+        <img src="image/sorvete2.svg" alt="Imagem com frutas espalhadas caindo dentro de um pote de vidro com milk shake">
         <h2>Shakes</h2>
       </div>
 
       <div class="card">
-        <img src="image/sorvete3.svg" alt="Imagem com 3 picolés de uva um em cima do outro com algumas frutas espalhadas">
+        <img src="image/sorvete3.svg" alt="Imagem com uma colher com uma bola de sorvete">
         <h2>Massas</h2>
       </div>
 
       <div class="card">
-        <img src="image/sorvete4.svg" alt="Imagem com 3 picolés de uva um em cima do outro com algumas frutas espalhadas">
+        <img src="image/sorvete4.svg" alt="Imagem com alguém segurando um picolé">
         <h2>Picolé</h2>
       </div>
 
